--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ requests = "^2.31.0"
 pandas = "^2.2.1"
 beautifulsoup4 = "^4.12.3"
 lxml = "^5.1.0"
+matplotlib = "^3.8.4"
+scikit-learn = "^1.4.1.post1"
 
 
 [tool.poetry.group.dev.dependencies]
